# py-docugen

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pr-labeler.yml  release.yml  test.yml
src/docugen/: __init__.py  cli.py
tests/: __init__.py  test_cli.py
